# internal/server/grpc.go
@@ -1,20 +1,26 @@
 package server
 
 import (
+	notifications_v1 "notifications/api/notifications/v1"
 	send_v1 "notifications/api/send/v1"
 	"notifications/internal/conf"
+	"notifications/internal/data"
 	"notifications/internal/service"
 
-	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/auth/jwt"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/grpc"
+	jwtv4 "github.com/golang-jwt/jwt/v4"
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Bootstrap, senderService *service.SenderService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Bootstrap, jwtp *data.JwtProcessor, senderService *service.SenderService, notificationsService *service.NotificationsService) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
+			jwt.Server(func(token *jwtv4.Token) (interface{}, error) {
+				return jwtp.GetSecret(), nil
+			}, jwt.WithSigningMethod(jwtv4.SigningMethodHS256), jwt.WithClaims(func() jwtv4.Claims { return &jwtv4.RegisteredClaims{} })),
 		),
 	}
 	if c.Server.Grpc.Network != "" {
@@ -28,6 +34,8 @@ func NewGRPCServer(c *conf.Bootstrap, senderService *service.SenderService, logg
 	}
 	srv := grpc.NewServer(opts...)
 
+	notifications_v1.RegisterNotificationsServer(srv, notificationsService)
 	send_v1.RegisterSenderServer(srv, senderService)
+
 	return srv
 }
