# internal/server/http.go
@@ -1,12 +1,12 @@
 package server
 
 import (
+	notifications_v1 "notifications/api/notifications/v1"
 	send_v1 "notifications/api/send/v1"
 	"notifications/internal/conf"
 	"notifications/internal/data"
 	"notifications/internal/service"
 
-	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/auth/jwt"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
@@ -14,7 +14,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Bootstrap, logger log.Logger, jwtp *data.JwtProcessor, senderService *service.SenderService) *http.Server {
+func NewHTTPServer(c *conf.Bootstrap, jwtp *data.JwtProcessor, senderService *service.SenderService, notificationsService *service.NotificationsService) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -34,6 +34,8 @@ func NewHTTPServer(c *conf.Bootstrap, logger log.Logger, jwtp *data.JwtProcessor
 	}
 	srv := http.NewServer(opts...)
 
+	notifications_v1.RegisterNotificationsHTTPServer(srv, notificationsService)
 	send_v1.RegisterSenderHTTPServer(srv, senderService)
+
 	return srv
 }
