# openapi.yaml
@@ -3,7 +3,7 @@
 
 openapi: 3.0.3
 info:
-    title: Sender API
+    title: ""
     version: 0.0.1
 paths:
     /v1/notifications/fcm/devices:
@@ -40,8 +40,74 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.send.v1.EmptyReply'
+    /v1/notifications/list:
+        post:
+            tags:
+                - Notifications
+            operationId: Notifications_ListNotifications
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.notifications.v1.ListNotificationsRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.notifications.v1.ListNotificationsReply'
 components:
     schemas:
+        api.notifications.v1.ListNotificationsReply:
+            type: object
+            properties:
+                notifications:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/api.notifications.v1.Notification'
+                nextFromId:
+                    type: integer
+                    format: int64
+                nextToId:
+                    type: integer
+                    format: int64
+        api.notifications.v1.ListNotificationsRequest:
+            type: object
+            properties:
+                userId:
+                    type: integer
+                    format: int64
+                fromId:
+                    type: integer
+                    format: int64
+                toId:
+                    type: integer
+                    format: int64
+                limit:
+                    type: integer
+                    format: int32
+        api.notifications.v1.Notification:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                type:
+                    type: string
+                title:
+                    type: string
+                text:
+                    type: string
+                eventId:
+                    type: integer
+                    format: int64
+                contactId:
+                    type: integer
+                    format: int64
+                createdAt:
+                    type: string
         api.send.v1.EmptyReply:
             type: object
             properties: {}
@@ -51,4 +117,5 @@ components:
                 token:
                     type: string
 tags:
+    - name: Notifications
     - name: Sender
